[gd_scene load_steps=10 format=3 uid="uid://b3ntnuvrvys63"]

[ext_resource type="Script" uid="uid://2x2o4sni7v6q" path="res://Stages/Game/main/main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://d2nt6gtj5g3cm" path="res://Common/Components/attack/attack.tscn" id="2_kek77"]
[ext_resource type="Environment" uid="uid://oc0251grk5l0" path="res://Config/Environments/new_environment.tres" id="2_lquwl"]
[ext_resource type="PackedScene" uid="uid://duje032qpuq2" path="res://Stages/UI/main_ui/ui.tscn" id="3_272bh"]
[ext_resource type="Script" uid="uid://c474c2uw4525n" path="res://Stages/Game/main/camera.gd" id="5_hjeu7"]
[ext_resource type="PackedScene" uid="uid://o24bc34g5fea" path="res://Stages/Levels/level_1.tscn" id="6_pcgyj"]
[ext_resource type="PackedScene" uid="uid://bpf2dmre1y8t0" path="res://Utilities/Placement/obstacle_placement/obstacle_placement.tscn" id="7_kek77"]

[sub_resource type="NavigationMesh" id="NavigationMesh_pcgyj"]
geometry_parsed_geometry_type = 1

[sub_resource type="Environment" id="Environment_272bh"]

[node name="Main" type="Node3D"]
script = ExtResource("1_1bvp3")

[node name="Attack" parent="." instance=ExtResource("2_kek77")]
damage_amount = 1

[node name="UI" parent="." instance=ExtResource("3_272bh")]
process_mode = 3

[node name="Camera3D" type="Camera3D" parent="."]
process_mode = 3
transform = Transform3D(-4.37114e-08, 0.707107, -0.707107, 0, 0.707107, 0.707107, 1, 3.09086e-08, -3.09086e-08, -248.376, 113.256, -24.6237)
environment = ExtResource("2_lquwl")
projection = 1
fov = 58.3
size = 19.269
script = ExtResource("5_hjeu7")
camera_move_speed = 30.0
camera_zoom_fast_multiplier = 5.0
camera_max_size = 300.0

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_pcgyj")
use_edge_connections = false

[node name="Level1" parent="." node_paths=PackedStringArray("ui") instance=ExtResource("6_pcgyj")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0)
ui = NodePath("../UI")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_272bh")

[node name="EnemyRayCast3D" type="RayCast3D" parent="."]
enabled = false
collision_mask = 4

[node name="ObstaclePlacement" parent="." node_paths=PackedStringArray("navigation_region", "camera") instance=ExtResource("7_kek77")]
navigation_region = NodePath("../NavigationRegion3D")
camera = NodePath("../Camera3D")

[connection signal="obstacle_spawn_requested" from="UI" to="." method="_on_obstacle_spawn_requested"]
[connection signal="rebake_navigation_mesh" from="ObstaclePlacement" to="." method="rebake_navigation_mesh"]
